--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,6 +7,8 @@
   justify-content: space-between;
   align-items: center;
   font-size: 14px;
+  padding: 1%;
+  box-shadow: 0px -2px 20px black;
 
 }
 .socialNewtworks
