--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -1,36 +1,30 @@
 .container {
-
-  height: 100px;
+  height: 75px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  padding: 1%;
+  box-shadow: 0px 2px 20px black;
 }
 
 .links {
-
   display: flex;
   gap: 20px;
   align-items: center;
   text-decoration: none;
-
 }
 
 .logo {
-
   font-weight: bold;
   font-size: 22px;
   text-decoration: none;
-
 }
 
 .logout {
-
   padding: 5px;
   border: none;
   background-color: #53c28b;
   color: white;
   cursor: pointer;
   border-radius: 3px;
-
 }
