--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: rgb(200, 200, 200);
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: linear-gradient(45deg, rgb(15, 15, 190), black);
 }
 
 a {
