--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,39 @@
 .container {
-    height: 100svh;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+}
+
+.item {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    color: white;
+}
+
+.title {
+    width: 100px;
+    font-size: 5rem;
+}
+
+.item:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.seeMore {
+    width: 200px;
+    height: 50px;
+    font-size: 1rem;
+    color: rgb(21, 91, 241);
+    border-radius: 100px;
+    box-shadow: 0px 0px 20px white;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
