--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -5,6 +5,8 @@
   align-items: center;
   padding: 1%;
   box-shadow: 0px 2px 20px black;
+  background-color: transparent;
+  border-radius: 0 0 10px 10px;
 }
 
 .links {
