--- a/src/app/shop/page.module.css
+++ b/src/app/shop/page.module.css
@@ -1,8 +1,28 @@
 .container {
+    width: 100%;
+    height: fit-content;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 5%;
     gap: 50px;
-    margin-bottom: 50px;
+}
+
+.card {
+    width: 250px;
+    height: 375px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    background-color: white;
+    margin: 5px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 
 .image {
@@ -11,6 +31,7 @@
 
 .title {
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .desc {
