--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,9 +1,6 @@
 .button {
-    padding: 20px;
-    cursor: pointer;
-    background-color: #53c28b;
-    border: none;
-    border-radius: 5px;
-    width: max-content;
     color: white;
+    border: 1px solid white;
+    cursor: pointer;
+    background-color: transparent;
 }
