--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,3 +1,49 @@
 .container {
-    height: 100svh;
+    min-height: 100svh;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.info {
+    width: 90%;
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+}
+
+.crew {
+    width: 100%;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card {
+    width: 200px;
+    height: 275px;
+    border: 1px solid white;
+    border-radius: 50px;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 1%;
+}
+
+.name {
+    font-size: 1rem;
+}
+
+.about {
+    font-size: 10px;
 }
