--- a/src/app/shop/page.module.css
+++ b/src/app/shop/page.module.css
@@ -1,6 +1,24 @@
 .container {
     width: 100%;
+    min-height: 100svh;
     height: fit-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.searchBar {
+    width: 300px;
+    height: 35px;
+    border-radius: 100px 100px 50px 50px;
+    background-color: transparent;
+    padding: 1%;
+    border: 1px solid white;
+    outline: none;
+    color: white;
+}
+
+.itemHolder {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
