--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -10,6 +10,23 @@
   border-radius: 10px 10px 0 0;
 }
 
+.contacts {
+  width: 200px;
+  height: 35px;
+  border-radius: 100px;
+  background-color: transparent;
+  padding: 1%;
+  border: 1px solid white;
+  outline: none;
+  color: white;
+}
+
+.submitButton {
+  width: 75px;
+  height: 25px;
+  border-radius: 100px 0 100px 0;
+}
+
 .socialNewtworks {
   display: flex;
   align-items: center;
