--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    color: white;
 }
 
 .title {
@@ -29,10 +28,10 @@
     width: 200px;
     height: 50px;
     font-size: 1rem;
-    color: rgb(21, 91, 241);
     border-radius: 100px;
-    box-shadow: 0px 0px 20px white;
-    background-color: white;
+    box-shadow: 0px 0px 20px var(--invertedColor);
+    background-color: var(--invertedColor);
+    color: var(--backColor);
     display: flex;
     justify-content: center;
     align-items: center;
