--- a/src/app/shop/page.module.css
+++ b/src/app/shop/page.module.css
@@ -13,9 +13,10 @@
     border-radius: 100px 100px 50px 50px;
     background-color: transparent;
     padding: 1%;
-    border: 1px solid white;
+    border: 1px solid var(--invertedColor);
+    color: var(--invertedColor);
+    box-shadow: 0 0 10px var(--invertedColor);
     outline: none;
-    color: white;
 }
 
 .itemHolder {
@@ -33,10 +34,10 @@
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--invertedColor);
     margin: 5px;
     overflow: hidden;
-    transition: 0.5s;
+    color: var(--backColor);
 }
 
 .card:hover {
@@ -54,5 +55,4 @@
 
 .desc {
     font-size: 18px;
-    color: #999;
 }
