--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -19,7 +19,8 @@
 
 .crew {
     width: 100%;
-    height: 300px;
+    min-height: 300px;
+    height: fit-content;
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
     justify-content: space-around;
@@ -36,7 +37,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 5%;
     padding: 1%;
 }
 
