--- a/src/app/shop/[id]/page.module.css
+++ b/src/app/shop/[id]/page.module.css
@@ -1,12 +1,14 @@
 .container {
     width: 100%;
-    height: 100svh;
+    min-height: 100svh;
+    height: fit-content;
 }
 
 .shopItemContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 50px;
     margin-top: 75px;
 }
