--- a/src/components/darkModeToggle/DarkModeToggle.module.css
+++ b/src/components/darkModeToggle/DarkModeToggle.module.css
@@ -13,17 +13,18 @@
 
 }
 
-.icon{
+.icon {
 
     font-size: 12px;
 
 }
-.ball{
 
-    width: 15px;
-    height: 15px;
-    border: 1px solid white;
-    background-color: rgb(10, 10, 10);
+.ball {
+
+    width: 17px;
+    height: 17px;
+    border: 1px solid var(--invertedColor);
+    background-color: var(--backColor);
     border-radius: 50%;
     position: absolute;
 
