--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -4,3 +4,8 @@
     cursor: pointer;
     background-color: transparent;
 }
+
+.button:hover {
+    color: var(--backColor);
+    background-color: var(--invertedColor);
+}
