--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -19,19 +19,19 @@
 
 .crew {
     width: 100%;
-    height: fit-content;
+    height: 500px;
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     gap: 50px;
     padding: 5%;
     box-shadow: 0 0 10px var(--invertedColor);
+    overflow-x: scroll;
 }
 
 .card {
-    width: 200px;
+    width: 300px;
     height: 350px;
     border: 1px solid white;
     border-radius: 50px;
@@ -43,7 +43,6 @@
     text-align: center;
     gap: 5%;
     padding: 1%;
-    flex: 1;
     box-shadow: 5px 5px 10px var(--invertedColor);
 }
 
