--- a/src/app/shop/page.module.css
+++ b/src/app/shop/page.module.css
@@ -20,7 +20,18 @@
     width: 300px;
     height: 35px;
     border-radius: 100px 100px 50px 50px;
-    margin-bottom: 10px;
+}
+
+.addProduct {
+    width: 35px;
+    height: 35px;
+    margin: 10px;
+    filter: drop-shadow(0 0 10px var(--invertedColor));
+}
+
+.plusImage {
+    width: 35px;
+    height: 35px;
 }
 
 .fromPrice {
@@ -32,7 +43,6 @@
 .toPrice {
     width: 50px;
     height: 25px;
-    margin-right: 10px;
 }
 
 .itemHolder {
