--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,15 @@
   transition: 1s;
 }
 
+input, textarea {
+  background-color: transparent;
+  padding: 1%;
+  border: 1px solid var(--invertedColor);
+  color: var(--invertedColor);
+  box-shadow: 0 0 10px var(--invertedColor);
+  outline: none;
+}
+
 html,
 body {
   max-width: 100vw;
